--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://94ad83e2-e19d-4969-96b8-b50c6013c399.preview.emergentagent.com
 WDS_SOCKET_PORT=443
